src/objects/LeanData__Upload_Contact_Account__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account_City__c</fullName>
        <label>Account City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Id__c</fullName>
        <label>Account Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Phone__c</fullName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_PostalCode__c</fullName>
        <label>Account PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_State__c</fullName>
        <label>Account State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Street__c</fullName>
        <label>Account Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account_Website__c</fullName>
        <label>Account Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Job_Id__c</fullName>
        <label>CSV Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Row_Id__c</fullName>
        <label>CSV Row Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Upload Contact Account</label>
    <nameField>
        <label>Upload Contact Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload Contact Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>